import org.jetbrains.kotlin.gradle.dsl.JvmTarget

plugins {
    id 'org.jetbrains.kotlin.jvm'
    id 'maven-publish'
}

ext.POM_ARTIFACT_ID = "core_router_processor"
ext.POM_NAME = "core_router_processor"
ext.POM_DESCRIPTION = "Router KSP processor."

dependencies {
    // 依赖注解模块
    implementation project(":core_router_annotation")

    // KSP
    implementation libs.ksp.api

    // 代码生成
    implementation libs.kotlinpoet
    implementation libs.kotlinpoet.ksp

    testImplementation libs.junit
    testImplementation libs.kctfork.core
    testImplementation libs.kctfork.ksp
    testImplementation project(":core_router_annotation")
}

kotlin {
    compilerOptions {
        jvmTarget = JvmTarget.JVM_17
        freeCompilerArgs.add("-Xsuppress-version-warnings")
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
    withSourcesJar()
}

tasks.withType(Test).configureEach {
    jvmArgs(
            "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
            "--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
    )
}

apply from: rootProject.file("gradle/router-publish.gradle")

publishing {
    publications {
        release(MavenPublication) {
            from components.java
        }
    }
}
